--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "author": "Mohsin shoaib",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0"
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.4.0",
+    "mongoose-gridfs": "^1.3.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^3.1.2"
   }
 }
